--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,7 @@
 
 @layer base {
   body {
-    @apply overflow-hidden leading-relaxed;
+    @apply leading-relaxed;
   }
   .page {
     @apply w-full h-screen overflow-hidden;
@@ -45,7 +45,7 @@
     @apply text-[25px] leading-tight md:text-[50px] md:leading-[1.3] mb-8 font-semibold;
   }
   .h2 {
-    @apply text-[35px] leading-tight md:text-[54px] md:leading-[1.3] mb-4 font-semibold;
+    @apply text-[25px] leading-tight md:text-[35px] lg:text-[54px] md:leading-[1.3] mb-4 font-semibold;
   }
   p {
     @apply leading-[1.8] text-white/60 font-light;
